# data-science

./: README.md  pyproject.toml
classification/: binary_classification_xgboost.ipynb
regression/: linear_regression.ipynb  linear_regression_intro.ipynb  simple_linear_regression.ipynb
