[tool.poetry]
name = "data-science"
version = "0.1.0"
description = "General data science practice and experimentation"
authors = ["Peter Csizsek <peter.csizsek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
